--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -271,4 +271,7 @@
   <data name="ccShareAlike" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ccShareAlike.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ftc_logo_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ftc_logo_new.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
