--- a/frmSettings.resx
+++ b/frmSettings.resx
@@ -120,6 +120,9 @@
   <metadata name="toolTipMgr.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="toolTipMgr.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="rdoSoundRemote.SuperTooltip" xml:space="preserve">
     <value>Sound will be played elsewhere.
 For server configurations, this setting instructs the clients to play the game sounds.
@@ -128,5 +131,8 @@ For client configurations, this setting indicates that the server is responsible
   <data name="chkAutoElimTimeout.SuperTooltip" xml:space="preserve">
     <value>If enabled during eliminations, the system will automatically start an Event Timeout on the previous field when the user Advances to the next match.
 Users should not click the Advance to Next Match button (F2) until the referees signal field reset.</value>
+  </data>
+  <data name="chkPreventMovement.SuperTooltip" xml:space="preserve">
+    <value>Disabling this option will allow the user to change their selected field while a match is active, and could result in the user starting more than one match at a time. While this would work just fine, the game sounds may overlap and confuse the teams participating.</value>
   </data>
 </root>
