--- a/FTC-Timer-Display/Properties/Resources.resx
+++ b/FTC-Timer-Display/Properties/Resources.resx
@@ -127,7 +127,7 @@
   <data name="gamelogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gamelogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="vaflogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="vaflogoold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vaf-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Rcolon" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -183,5 +183,8 @@
   </data>
   <data name="gamecontroller" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\gamecontroller.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vaflogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vaflogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
