--- a/FTC-Timer-Display/Properties/Resources.resx
+++ b/FTC-Timer-Display/Properties/Resources.resx
@@ -235,4 +235,7 @@
   <data name="Gcolonoff" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Gcolonoff.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="vaflogo_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FIRST-Regional-InVirginia-Icon-v-allBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
