--- a/FTC-Timer-Display/Properties/Resources.resx
+++ b/FTC-Timer-Display/Properties/Resources.resx
@@ -121,9 +121,6 @@
   <data name="ftc_logo_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ftc_logo_new.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="gamelogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\gamelogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="vaflogoold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vaf-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -162,5 +159,8 @@
   </data>
   <data name="vaflogo_new" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\FIRST-Regional-InVirginia-Icon-v-allBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vortexlogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vortexlogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
