--- a/FTC-Timer-Display/Properties/Resources.resx
+++ b/FTC-Timer-Display/Properties/Resources.resx
@@ -163,4 +163,7 @@
   <data name="vortexlogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vortexlogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FCLogoBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FCLogoBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
