--- a/FTC-Timer-Display/frmSettings.resx
+++ b/FTC-Timer-Display/frmSettings.resx
@@ -120,6 +120,9 @@
   <metadata name="toolTipMgr.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="toolTipMgr.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="rdoSoundRemote.SuperTooltip" xml:space="preserve">
     <value>Sound will be played elsewhere.
 For server configurations, this setting instructs the clients to play the game sounds.
